[gd_scene load_steps=12 format=2]

[ext_resource path="res://LobbySetup.gd" type="Script" id=1]
[ext_resource path="res://Characters/character_button_group.tres" type="ButtonGroup" id=2]
[ext_resource path="res://sprites/char/pokey/pokey_front_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/char/pizzagirl/pizzagirl_front_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/char/mrsaturn/mrsaturn_front_1.png" type="Texture" id=5]
[ext_resource path="res://sprites/char/frank/frank_front_1.png" type="Texture" id=6]
[ext_resource path="res://Fonts/apple_kid.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://LobbyUI/EB_Panel.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_top = 1
extra_spacing_bottom = -1
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="LobbySetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 100
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyContainer" type="VBoxContainer" parent="Margin"]
margin_left = 300.0
margin_top = 100.0
margin_right = 723.0
margin_bottom = 585.0
size_flags_horizontal = 4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chars" type="GridContainer" parent="Margin/LobbyContainer"]
margin_top = 93.0
margin_right = 423.0
margin_bottom = 149.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="Pokey" type="CheckBox" parent="Margin/LobbyContainer/Chars" groups=[
"char",
]]
margin_right = 90.0
margin_bottom = 56.0
pressed = true
group = ExtResource( 2 )
text = "Pokey"
icon = ExtResource( 3 )

[node name="Pizzagirl" type="CheckBox" parent="Margin/LobbyContainer/Chars" groups=[
"char",
]]
margin_left = 100.0
margin_right = 204.0
margin_bottom = 56.0
group = ExtResource( 2 )
text = "Pizza Girl"
icon = ExtResource( 4 )

[node name="MrSaturn" type="CheckBox" parent="Margin/LobbyContainer/Chars" groups=[
"char",
]]
margin_left = 214.0
margin_right = 324.0
margin_bottom = 56.0
group = ExtResource( 2 )
text = "Mr. Saturn"
icon = ExtResource( 5 )

[node name="Frank" type="CheckBox" parent="Margin/LobbyContainer/Chars" groups=[
"char",
]]
margin_left = 334.0
margin_right = 423.0
margin_bottom = 56.0
group = ExtResource( 2 )
text = "Frank"
icon = ExtResource( 6 )

[node name="Name" type="HBoxContainer" parent="Margin/LobbyContainer"]
margin_top = 164.0
margin_right = 423.0
margin_bottom = 187.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/LobbyContainer/Name"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 18.0
text = "Enter your name"

[node name="NameEdit" type="LineEdit" parent="Margin/LobbyContainer/Name"]
margin_left = 74.0
margin_right = 194.0
margin_bottom = 23.0
rect_min_size = Vector2( 120, 0 )
custom_styles/normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabPanel" type="Panel" parent="Margin/LobbyContainer"]
margin_top = 202.0
margin_right = 423.0
margin_bottom = 352.0
rect_min_size = Vector2( 420, 150 )
size_flags_horizontal = 5
custom_styles/panel = ExtResource( 8 )

[node name="TabMargin" type="MarginContainer" parent="Margin/LobbyContainer/TabPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Margin/LobbyContainer/TabPanel/TabMargin"]
margin_right = 423.0
margin_bottom = 150.0
custom_styles/tab_fg = ExtResource( 8 )
custom_styles/tab_bg = ExtResource( 8 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Control" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="Center" type="CenterContainer" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Host"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Host/Center"]
margin_left = 174.0
margin_top = 52.0
margin_right = 248.0
margin_bottom = 75.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/normal = ExtResource( 8 )
text = "Host a game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Control" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="ipwrap" type="VBoxContainer" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpBox" type="HBoxContainer" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap"]
margin_top = 38.0
margin_right = 423.0
margin_bottom = 61.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/IpBox"]
margin_left = 94.0
margin_top = 5.0
margin_right = 129.0
margin_bottom = 18.0
text = "Enter IP:"

[node name="IpAddr" type="LineEdit" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/IpBox"]
margin_left = 133.0
margin_right = 253.0
margin_bottom = 23.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 4
custom_styles/normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/IpBox"]
margin_left = 257.0
margin_right = 328.0
margin_bottom = 23.0
size_flags_vertical = 4
custom_styles/normal = ExtResource( 8 )
text = "Join a game"

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap"]
margin_top = 65.0
margin_right = 423.0
margin_bottom = 88.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="localhost" type="Button" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/HBoxContainer"]
margin_left = 126.0
margin_right = 185.0
margin_bottom = 23.0
custom_styles/normal = ExtResource( 8 )
text = "localhost"

[node name="jeremy" type="Button" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/HBoxContainer"]
margin_left = 189.0
margin_right = 239.0
margin_bottom = 23.0
custom_styles/normal = ExtResource( 8 )
text = "jeremy"

[node name="ashley" type="Button" parent="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/HBoxContainer"]
margin_left = 243.0
margin_right = 296.0
margin_bottom = 23.0
custom_styles/normal = ExtResource( 8 )
text = "ashleyu"

[node name="ErrorText" type="Label" parent="Margin/LobbyContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 367.0
margin_right = 423.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 25 )
align = 1
valign = 1

[node name="Players" type="Panel" parent="Margin"]
visible = false
margin_left = 15.0
margin_top = 100.0
margin_right = 1009.0
margin_bottom = 585.0

[node name="MarginContainer" type="MarginContainer" parent="Margin/Players"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/Players/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 979.0
margin_bottom = 470.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/Players/MarginContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 13.0
text = "Players:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Margin/Players/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 580.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 120 )
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Margin/Players/MarginContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 580.0
margin_bottom = 182.0
text = "Start Game"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 72.0
margin_bottom = 56.0
[connection signal="pressed" from="Margin/LobbyContainer/Chars/Pokey" to="." method="_on_Pokey_pressed"]
[connection signal="pressed" from="Margin/LobbyContainer/Chars/Pizzagirl" to="." method="_on_Pizzagirl_pressed"]
[connection signal="pressed" from="Margin/LobbyContainer/Chars/MrSaturn" to="." method="_on_MrSaturn_pressed"]
[connection signal="pressed" from="Margin/LobbyContainer/Chars/Frank" to="." method="_on_Frank_pressed"]
[connection signal="focus_entered" from="Margin/LobbyContainer/Name/NameEdit" to="." method="_on_NameEdit_focus_entered"]
[connection signal="text_changed" from="Margin/LobbyContainer/Name/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="pressed" from="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Host/Center/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/IpBox/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/HBoxContainer/localhost" to="." method="_on_localhost_pressed"]
[connection signal="pressed" from="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/HBoxContainer/jeremy" to="." method="_on_jeremy_pressed"]
[connection signal="pressed" from="Margin/LobbyContainer/TabPanel/TabMargin/TabContainer/Join/ipwrap/HBoxContainer/ashley" to="." method="_on_ashley_pressed"]
[connection signal="pressed" from="Margin/Players/MarginContainer/VBoxContainer/Start" to="." method="_start_game"]
